style what we do section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- end hero -->
 
         <!-- "what we do" section -->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, deserunt id dolorem quod pariatur illum atque incidunt ea autem laudantium reiciendis maxime rem nemo. Quos est expedita officiis voluptatibus architecto!
