--- a/index.html
+++ b/index.html
@@ -143,6 +143,30 @@
         <!-- "reach out" section -->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3342.7199690314274!2d-96.73250068446127!3d33.09015107525952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c17ed0c7a80c5%3A0x362e43ee90fa10b6!2s2023%20Londonderry%20Dr%2C%20Allen%2C%20TX%2075013!5e0!3m2!1sen!2sus!4v1643600422805!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br />
+                        Some Town, CA <br />
+                        12345<br />
+                        P: 555.RUN.BUDZ (555.786.2839)<br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+            </div>
         </section>
 
         <!-- footer -->
